New config system

--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -11,6 +11,7 @@
                 <RadzenMenuItem Text="Home" Path="" Icon="home"></RadzenMenuItem>
                 <RadzenMenuItem Text="Videos" Path="videos" Icon="video_file"></RadzenMenuItem>
                 <RadzenMenuItem Text="Re-encode" Path="reencode" Icon="automation"></RadzenMenuItem>
+                <RadzenMenuItem Text="Settings" Path="settings" Icon="settings"></RadzenMenuItem>
             </RadzenMenu>
         </RadzenStack>
     </RadzenHeader>
