--- a/Components/Pages/ReEncode.razor
+++ b/Components/Pages/ReEncode.razor
@@ -3,11 +3,11 @@
 
 <div class="mb-3">
     <RadzenLabel Text="Quality Ratio Threshold" />
-    <RadzenNumeric @bind-Value=ReEncode.Threshold TValue="double" Step="10" Style="width: 200px;" Change="RefreshDb" />
+    <RadzenNumeric @bind-Value=Threshold TValue="double" Step="10" Style="width: 200px;" Change="RefreshDb" />
     <RadzenLabel Text="Min size [MB]" />
-    <RadzenNumeric @bind-Value=ReEncode.MinSizeMb TValue="double" Step="10" Style="width: 200px;" Change="RefreshDb" />
+    <RadzenNumeric @bind-Value=MinSizeMb TValue="double" Step="10" Style="width: 200px;" Change="RefreshDb" />
     <RadzenLabel Text="Min age [H]" />
-    <RadzenNumeric @bind-Value=ReEncode.MinAgeH TValue="double" Step="10" Style="width: 200px;" Change="RefreshDb" />
+    <RadzenNumeric @bind-Value=MinAgeH TValue="double" Step="10" Style="width: 200px;" Change="RefreshDb" />
     <RadzenButton Text=@($"Start Re-encoding {_selectedVideoCount} videos") Click="StartReencoding" ButtonStyle="ButtonStyle.Danger" Visible=@(_videos.Count > 0) />
 </div>
 
